--- a/templates/invitation.html
+++ b/templates/invitation.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    <title>TEST</title>    
+    <title>{{ guest.name }}</title>    
 {% endblock title %}
 
 {% block scripts %}
@@ -10,26 +10,29 @@
 {% endblock scripts %}
 
 {% block content %}
-    <span id="date" class="hidden">July 24, 2024 13:00:00</span>
+    <span id="date" class="hidden">{{ date_js }}</span>
+    <span id="width" class="hidden">{{ width }}</span>
+    <span id="longitude" class="hidden">{{ longitude }}</span>
+    <span id="name_label" class="hidden">{{ name_label }}</span>
     <div class="mt-10 flex flex-col justify-center items-center text-center">
         <span>Вы приглашены на свадьбу</span>
         <div class="mt-5 flex flex-col">
-            <span class="text-4xl">Эдуарда</span>
+            <span class="text-4xl">{{ groom }}</span>
             <span class="text-xl">и</span>
-            <span class="text-4xl">Натальи</span>
+            <span class="text-4xl">{{ bride }}</span>
         </div>
     </div>
     <div class="mt-10 flex flex-row justify-center items-center">
         <div class="flex flex-row justify-center items-center gap-10">
             <div class="text-center border-t border-b py-2 border-black w-32">
-                <span class="uppercase">СРЕДА</span>
+                <span class="uppercase">{{ name_week_day }}</span>
             </div>
             <div class="flex flex-col text-center">
-                <span>Июль</span>
-                <span>24</span>
+                <span>{{ day }}</span>
+                <span class="uppercase">{{ name_month }}</span>
             </div>
             <div class="text-center border-t border-b py-2 border-black w-32">
-                <span class="uppercase">13:00</span>
+                <span class="uppercase">{{ time }}</span>
             </div>
         </div>
     </div>
@@ -44,134 +47,118 @@
         <script src="{% static 'js/countdown.js' %}"></script> 
     </div>
     <div class="mt-10 flex flex-col justify-center items-center text-center">
-        <h1>Дорогие Емельяновы!</h1>
+        <h1 class="text-xl">{{ guest.name_guest }}!</h1>
         <span class="mt-2 md:w-1/2">
-            Мы рады сообщить Вам, что 24.07.2024 состоится самое главное торжество в нашей жизни - день нашей свадьбы!
+            Мы рады сообщить Вам, что {{ full_date }} состоится самое главное торжество в нашей жизни - день нашей свадьбы!
             Приглашаем Вас разделить с нами радость этого незабываемого дня.
         </span>
     </div>
     <div class="mt-10 flex flex-col justify-center items-center text-center">
         <span>Будем ждать</span>
         <span class="mt-2 md:w-1/2">
-            24.07.2024
+            {{ full_date }}
         </span>
         <span class="mt-2 md:w-1/2">
-            13:00
+            {{ time }}
         </span>
         <span class="mt-2 md:w-1/2">
-            аываыва ыва ываыва 
+            {{ place }}
         </span>
     </div>
-    <div class="mt-10 flex flex-col justify-center items-center">
-        <span class="text-center mb-5">Свадебное расписание</span>
+    {% if events %}
+    <div class="mt-10 md:mx-96 flex flex-col justify-center items-center border border-2 border-black px-2 rounded-md">
+        <span class="text-center mb-5 text-xl">Свадебное расписание</span>
+        {% for event in events %}
         <div class="mb-1 flex flex-row w-full md:w-1/3 gap-11">
-            <span class="w-1/4">13:00</span>
-            <span class="w-3/4 flex flex-col text-left">Роспись dfvdlkf dflv dlfj</span>
+            <span class="w-1/4">{{ event.time_event }}</span>
+            <span class="w-3/4 flex flex-col text-left">{{ event.description }}</span>
         </div>
-        <div class="mb-1 flex flex-row w-full md:w-1/3 gap-11">
-            <span class="w-1/4">14:00</span>
-            <span class="w-3/4 flex flex-col text-left">fsdfsdfsdf sd sdfs</span>
-        </div>
-        <div class="mb-1 flex flex-row w-full md:w-1/3 gap-11">
-            <span class="w-1/4">15:00</span>
-            <span class="w-3/4 flex flex-col text-left">dflv dlfj</span>
-        </div>
-        <div class="mb-1 flex flex-row w-full md:w-1/3 gap-11">
-            <span class="w-1/4">16:00</span>
-            <span class="w-3/4 flex flex-col text-left">sddlkf dflv dlfj</span>
-        </div>
+        {% endfor %}
     </div>
-    <div class="p-8 rounded-lg max-w-md w-full">
-        <form id="attendanceForm" class="flex flex-col" method="post">
+    {% endif %}
+    <div class="flex flex-col items-center w-full my-10">
+        <form id="attendanceForm" class="w-full flex flex-col items-center md:w-4/6 md:pl-30 md:ml-auto md:mr-auto" method="post">
             {% csrf_token %}
-            <span class="text-xl">Вы придете?</span>
-            <label class="inline-flex items-center">
-                <input type="radio" name="attendance" value="yes" class="" required/>
-                <span class="ml-2">Да</span>
-            </label>
-            <label class="inline-flex items-center">
-                <input type="radio" name="attendance" value="no" class="" required/>
-                <span class="ml-2">Нет</span>
-            </label>
-            <div id="additional-fields" class="flex flex-col mt-4 hidden">
-                <!-- Дополнительные поля -->
-                <div id="good-response" class="mt-4">
-                Мы очень рады!
-                </div>
-                
-                <span class="text-xl">Вам понадобиться трансфер на мероприятие?</span>
+            <span class="text-xl text-center w-full text-left">Вы придете?</span>
+            <div class="flex flex-col items-start w-full">
                 <label class="inline-flex items-center">
-                    <input type="radio" name="to_transfer" value="yes" class="" required/>
+                    <input type="radio" name="attendance" value="yes" required/>
                     <span class="ml-2">Да</span>
                 </label>
                 <label class="inline-flex items-center">
-                    <input type="radio" name="to_transfer" value="no" class="" required/>
+                    <input type="radio" name="attendance" value="no" required/>
                     <span class="ml-2">Нет</span>
                 </label>
-                <div id="formFromCity" class="hidden">
-                    <span class="text-xl">С какого города?</span>
-                    <label class="inline-flex items-center">
-                        <input type="radio" name="from_city" value="yes" class="" required/>
-                        <span class="ml-2">Менделеевск</span>
-                    </label>
-                    <label class="inline-flex items-center">
-                        <input type="radio" name="from_city" value="no" class="" required/>
-                        <span class="ml-2">Набережные Челны</span>
-                    </label>
-                </div>
-
-                <span class="text-xl">Вам понадобиться трансфер с мероприятие?</span>
-                <label class="inline-flex items-center">
-                    <input type="radio" name="from_transfer" value="yes" class="" required/>
-                    <span class="ml-2">Да</span>
-                </label>
-                <label class="inline-flex items-center">
-                    <input type="radio" name="from_transfer" value="no" class="" required/>
-                    <span class="ml-2">Нет</span>
-                </label>
-                
-                <div id="formToCity" class="hidden">
-                    <span class="text-xl">С какого города?</span>
-                    <label class="inline-flex items-center">
-                        <input type="radio" name="to_city" value="yes" class="" required/>
-                        <span class="ml-2">Менделеевск</span>
-                    </label>
-                    <label class="inline-flex items-center">
-                        <input type="radio" name="to_city" value="no" class="" required/>
-                        <span class="ml-2">Набережные Челны</span>
-                    </label>
-                </div>
-
-                <span class="text-xl">Какие напитки предпочитаете?</span>                
-                <div>
-                    <input type="checkbox" id="scales" name="scales"/>
-                    <label for="scales">Scales</label>
-                </div>
-                <div>
-                    <input type="checkbox" id="scales" name="scales"/>
-                    <label for="scales">Scales</label>
-                </div>
-                
-                {% comment %} <input type="text" placeholder="Ваше имя" class="mt-2 p-2 w-full border rounded">
-                <input type="email" placeholder="Ваш email" class="mt-2 p-2 w-full border rounded">
-                <input type="text" placeholder="Компания" class="mt-2 p-2 w-full border rounded">
-                <input type="text" placeholder="Должность" class="mt-2 p-2 w-full border rounded">
-                <input type="text" placeholder="Комментарий" class="mt-2 p-2 w-full border rounded"> {% endcomment %}
             </div>
-            <div id="sad-response" class="mt-4 hidden">
+            <div id="additional-fields" class="mt-4 hidden flex flex-col items-start w-full">
+                <div id="good-response" class="mb-4 text-left w-full">
+                    Мы очень рады!
+                </div>
+                <div class="mt-5 w-full flex flex-col items-start">
+                    <span class="text-xl text-left w-full">Вам понадобится трансфер на мероприятие?</span>
+                    <label class="inline-flex items-center">
+                        <input id="toTransferYes" type="radio" name="to_transfer" value="yes" required/>
+                        <span class="ml-2">Да</span>
+                    </label>
+                    <label class="inline-flex items-center">
+                        <input id="toTransferNo" type="radio" name="to_transfer" value="no" required/>
+                        <span class="ml-2">Нет</span>
+                    </label>
+                </div>
+                <div id="formFromCity" class="hidden mt-5 flex flex-col items-start w-full">
+                    <span class="text-xl text-left w-full">С какого города?</span>
+                    {% for city in cities %}
+                    <label class="inline-flex items-center">
+                        <input type="radio" name="from_city" value="{{ city.name }}"/>
+                        <span class="ml-2">{{ city.name }}</span>
+                    </label>                    
+                    {% endfor %}
+                </div>
+                <div class="mt-5 w-full flex flex-col items-start">
+                    <span class="text-xl text-left w-full">Вам понадобится трансфер с мероприятия?</span>
+                    <label class="inline-flex items-center">
+                        <input id="fromTransferYes" type="radio" name="from_transfer" value="yes"/>
+                        <span class="ml-2">Да</span>
+                    </label>
+                    <label class="inline-flex items-center">
+                        <input id="fromTransferNo" type="radio" name="from_transfer" value="no"/>
+                        <span class="ml-2">Нет</span>
+                    </label>
+                </div>
+                <div id="formToCity" class="hidden mt-5 flex flex-col items-start w-full">
+                    <span class="text-xl text-left w-full">В какой город?</span>
+                    {% for city in cities %}
+                    <label class="inline-flex items-center">
+                        <input type="radio" name="to_city" value="{{ city.name }}"/>
+                        <span class="ml-2">{{ city.name }}</span>
+                    </label>                    
+                    {% endfor %}
+                </div>
+                <div id="drinks" class="mt-5 w-full flex flex-col items-start">
+                    <span class="text-xl text-left w-full">Какие напитки предпочитаете?</span>
+                    {% for drink in drinks %}
+                    <div class="w-full text-left">
+                        <input type="checkbox" id="{{ drink.name }}" name="{{ drink.name }}"/>
+                        <label for="drink">{{ drink.name }}</label>
+                    </div>                   
+                    {% endfor %}
+                </div>
+            </div>
+            <div id="sad-response" class="mt-4 hidden text-left w-full">
                 Очень жаль, что вы не сможете присоединиться к нам.
             </div>
-            <button type="submit" class="mt-4 bg-white font-bold py-2 px-4 rounded">Отправить</button>
+            <button type="submit" class="mt-4 bg-white font-bold py-2 px-4 rounded border border-2 border-black hover:bg-black hover:text-white">Отправить</button>
         </form>
-    </div>    
+    </div>
+    
     <script src="{% static 'js/form.js' %}"></script> 
 
-    <div id="map" class="h-96 w-full md:w-3/4 lg:w-1/2 mx-auto my-4 shadow-lg rounded-lg"></div>
+    <div id="map" class="h-96 w-full md:w-3/4 lg:w-1/2 mx-auto my-4 shadow-2xl rounded-xl"></div>
 
     <script src="https://api-maps.yandex.ru/2.1/?apikey=fdsfF32rasdf&lang=ru_RU" type="text/javascript"></script>
 
     <script src="{% static 'js/map.js' %}"></script>
-        
+
     
 
 {% endblock content %}
