--- a/static/css/calendar.css
+++ b/static/css/calendar.css
@@ -3,11 +3,12 @@
     grid-template-columns: repeat(7, 1fr);
     gap: 5px;
     max-width: 350px;
-    /* margin: 20px auto; */
+    margin: 20px auto;
+    /* margin-top: 10px auto; */
     padding: 20px;
-    /* background-color: #fff; */
+    background-color: #fff;
     border-radius: 10px;
-    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .day, .date {
     text-align: center;
@@ -27,7 +28,7 @@
     position: relative;
     /* background-color: #ffebee; */
     color: #d32f2f;
-    /* font-weight: bold; */
+    font-weight: bold;
 }
 /* .highlighted::before {
     content: '';
