--- a/templates/index.html
+++ b/templates/index.html
@@ -61,6 +61,9 @@
     <div id="particles-js"></div>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="{% static 'js/load.js' %}"></script>
+    <div class="my-10 md:mx-81 flex flex-col justify-center items-center text-gray-400">
+        <a href="https://t.me/evg_9n" target="_blank"><span class="">Разработчик Евгений Емельянов</span></a>
+    </div>
 </body>
 </html>
 
