--- a/templates/main.html
+++ b/templates/main.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="min-h-screen flex flex-col justify-center py-12 sm:px-6 lg:px-8">
     <div class="sm:mx-auto sm:w-full sm:max-w-md text-center">
-        <h2 class="font-Great text-4xl font-extrabold text-gray-900 sm:text-5xl">
+        <h2 class="font-Comforter text-[3rem] md:text-[4rem] font-extrabold text-gray-900">
             {{ groom }} и {{ bride }}
         </h2>
     </div>
