--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6,6 +6,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Spectral+SC:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Comforter&display=swap');
+
 /*
 ! tailwindcss v3.4.4 | MIT License | https://tailwindcss.com
 */
@@ -866,6 +868,10 @@ video {
   font-family: Spectral SC, serif;
 }
 
+.font-Comforter{
+  font-family: Comforter, cursive;
+}
+
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
@@ -893,6 +899,18 @@ video {
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-\[2rem\]{
+  font-size: 2rem;
+}
+
+.text-\[5rem\]{
+  font-size: 5rem;
+}
+
+.text-\[3rem\]{
+  font-size: 3rem;
 }
 
 .font-bold{
@@ -1036,6 +1054,26 @@ video {
 
   .md\:w-4\/6{
     width: 66.666667%;
+  }
+
+  .md\:text-\[5rem\]{
+    font-size: 5rem;
+  }
+
+  .md\:text-\[10rem\]{
+    font-size: 10rem;
+  }
+
+  .md\:text-\[8rem\]{
+    font-size: 8rem;
+  }
+
+  .md\:text-\[6rem\]{
+    font-size: 6rem;
+  }
+
+  .md\:text-\[4rem\]{
+    font-size: 4rem;
   }
 }
 
