--- a/templates/invitation.html
+++ b/templates/invitation.html
@@ -23,7 +23,7 @@
     <div class="mt-10 text-center">
         <div class="relative">
             <span class="font-Spectral text-[10rem] leading-none text-gray-400">{{ groom | slice:":1"}}{{ bride | slice:":1"}}</span>
-            <span class="font-bold absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-black text-3xl whitespace-nowrap">{{ groom }} и {{ bride }}</span>
+            <span class="font-Comforter font-bold text-[3rem] md:text-[5rem] absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-black whitespace-nowrap">{{ groom }} и {{ bride }}</span>
         </div>
     </div>    
     {% comment %} Обращение к гостю {% endcomment %}
