--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
     {% else %}
     <div id="loading-screen" class="bg-white min-h-screen flex flex-col justify-center py-12 sm:px-6 lg:px-8">
         <div class="sm:mx-auto sm:w-full sm:max-w-md text-center mx-5">
-            <img src="{% static 'img/photo.jpg' %}" class="animate-bounce rounded-lg" alt="Здесь должно быть фото молодоженов) Но что-то пошло не так...">
+            <img src="{% static 'img/photo.jpeg' %}" class="animate-bounce rounded-lg" alt="Здесь должно быть фото молодоженов) Но что-то пошло не так...">
             {% comment %} <img src="{% static 'img/304.gif' %}" class="animate-bounce rounded-lg" alt="Здесь должно быть фото молодоженов) Но что-то пошло не так..."> {% endcomment %}
         </div>
     </div>
